# liquidation-bot

./: Cargo.toml  foundry.toml  hardhat.config.ts  package.json
contracts/: Constants.sol  Terminator.sol
contracts/interfaces/: IAddressProvider.sol  ICreditAccount.sol  ICreditFacade.sol  ICreditManagerV2.sol  IDataCompressor.sol  IPriceOracle.sol  IVersion.sol
contracts/libraries/: Types.sol
examples/: consumer.rs
gearbox-rs-bindings/: Cargo.toml
gearbox-rs-bindings/src/: abstract_adapter.rs  account_factory.rs  acl.rs  acl_trait.rs  address.rs  address_provider.rs  aggregator_v3_interface.rs  bytes_lib.rs  clones.rs  console.rs  contract_upgrader.rs  contracts_register.rs  convex_staked_position_token.rs  convex_v1_base_reward_pool_adapter.rs  convex_v1_booster_adapter.rs  convex_v1_claim_zap_adapter.rs  credit_account.rs  credit_configurator.rs  credit_facade.rs  credit_manager.rs  curve_lp2_price_feed.rs  curve_lp3_price_feed.rs  curve_lp4_price_feed.rs  curve_v1_adapter_2_assets.rs  curve_v1_adapter_3_assets.rs  curve_v1_adapter_4_assets.rs  curve_v1_adapter_base.rs  curve_v1_adapter_gauge.rs  curve_v1_adapter_minter.rs  curve_v1_adapter_st_eth.rs  curve_v1_st_eth_pool_gateway.rs  data_compressor.rs  diesel_token.rs  enumerable_set.rs  erc20.rs  erc721.rs  errors.rs  gear_token.rs  gearbox_degen_nft.rs  i_account_factory.rs  (+103 more)
src/: errors.rs  main.rs
src/ampq_service/: service.rs
src/config/: config.rs
src/discord_bot/: Cargo.toml
src/discord_bot/src/: main.rs
src/discord_bot/src/amqp/: consumer.rs  mod.rs
terminator-bindings/: Cargo.toml
(+76 files in other folders)
