[package]
name = "discord_bot"
version = "0.0.1"
authors = ["byli <24curiostiy@gmail.com>"]
edition = "2021"
default-run = "discord_bot"


[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tokio-amqp = "1.0.0"
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lapin = "1.8.0"
async-recursion = "0.3.2"
tracing = { version = "^0.1", default-features = false }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["fmt"] }
futures-lite = { version = "1.12.0", default-features = false }
async-global-executor = { version = "^2.0", default-features = false }

